--- a/src/about.html
+++ b/src/about.html
@@ -3,14 +3,17 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="global.styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..900&family=Syne:wght@400..800&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <title>Nina's Folio</title>
     </head>
 <body>
   <script src="header.js"></script> <!-- where header.js is the name of our reusable component script -->
+  <script src="footer.js"></script> <!-- where header.js is the name of our reusable component script -->
+
 <header-component></header-component>
 
   <div class="cursor"></div>
@@ -111,13 +114,13 @@
       </div>
   </section>
 
-  
+  <footer-component></footer-component>
+
 
 
 
   
   <footer id="footer"></footer>
-  <script type="module" src="module.js"></script>
   <script type="module" src="cursor.js"></script>
 </body>
 </html>
