--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
 
 <body>
   <script src="header.js"></script> <!-- where header.js is the name of our reusable component script -->
+  <script src="footer.js"></script> <!-- where header.js is the name of our reusable component script -->
+
 <header-component></header-component>
 
 
@@ -180,12 +182,10 @@
   <p>All case studies are currently under construction ⁽⁽◝( • ω • )◜⁾⁾	</p>
 </section>
 
-      <footer id="footer"></footer>
+<footer-component></footer-component>
     
       <script type="module" src="main.js"></script>
-      <script type="module" src="module.js"></script>
       <script type="module" src="cursor.js"></script>
-      <!-- <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script> -->
 
   </body>
 </html>
