--- a/src/archive.html
+++ b/src/archive.html
@@ -4,7 +4,10 @@
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="global.styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..900&family=Syne:wght@400..800&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet">
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
         <title>Nina's Folio</title>
     </head>
@@ -14,8 +17,11 @@
 
 <header-component></header-component>
 
-  <div class="cursor"></div>
-  <div class="cursor-follower"></div>
+
+<div class="cursor">
+  <span class="cursor-text"></span>
+</div>
+<div class="cursor-follower"></div>
 
       <!-- First Column -->
       <section>
@@ -39,6 +45,44 @@
           <img src="turtle.png" alt="Turtle" class="w-full h-auto md:h-96 object-cover rounded-2xl">
         </div>
       </section>
+
+
+
+      
+
+    <section class="flex flex-col md:flex-row pt-8 md:pt-12 md:pb-6 border-t border-grey gap-6 flex-1 bg-[#ECF4FF]">
+      <div class="flex flex-col gap-9 px-4 md:px-16">
+          <h3>Let's Chat</h3>
+          <h4>See something that caught your eye? I’d be happy to collaborate and discuss new opportunities together</h4>
+      </div>
+      <div class="w-full">
+
+        <a href="https://drive.google.com/file/d/15Vbiz09x6SVD2cTScr3ldKVGAPqeNlPY/view?usp=sharing" target="_blank">
+          <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
+            <h6>Resume</h6>
+            <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
+          </div>
+        </a>
+
+        <a href="about.html">
+          <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
+            <h6>About</h6>
+            <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
+            <span class="cursor-text">About me</span>
+          </div>
+        </a>
+
+        <!-- Add the hover-image class to other elements as well -->
+
+        <a href="archive.html">
+          <div class="p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
+            <h6>Archive</h6>
+            <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
+          </div>
+        </a>
+      </div>
+    </section>
+  
       <footer-component></footer-component>
 
       
