--- a/src/about.html
+++ b/src/about.html
@@ -24,16 +24,16 @@
 </div>
 <div class="cursor-follower"></div>
 
-  <section class="flex flex-col md:flex-row py-8 md:py-20 px-4 md:px-16 gap-8 items-center pt-8 md:pt-40">
+  <section class="flex flex-col md:flex-row py-8 md:py-20 px-4 md:px-16 gap-8 md:gap-16 items-center pt-8 md:pt-40">
     <!-- Right Image Section -->
     <div class="flex-auto">
-      <img src="profile.jpg" alt="Profile picture of Nina Le" class="rounded-2xl max-w-[320px] h-auto object-contain">
+      <img src="profile.jpg" alt="Profile picture of Nina Le" class="rounded-2xl max-w-[400px] h-auto object-contain">
     </div>
     <!-- Left Content Section -->
-    <div class="flex flex-col gap-8 md:w-full">
+    <div class="flex flex-col gap-16 md:w-full">
       <div>
-        <h3 class="pb-8">Nice to meet you!</h3>
-        <h6>
+        <h3 class="pb-4">Nice to meet you!</h3>
+        <h6 class="md:max-w-[600px]">
           I’m Nina Le (She/Her), a uxui designer and third-year design student at York University's Honours Bachelor of Design program 𖹭 
           I’m passionate about creating thoughtful, inclusive solutions that optimize feasibility, viability, and desirability for current or future features. 
           Whether working on uxui or experimental projects, I love diving into research and collaborating with cross-functional teams to craft experiences that cater to the user.
@@ -43,8 +43,8 @@
         </h6>
       </div>
       <a href="https://drive.google.com/file/d/15Vbiz09x6SVD2cTScr3ldKVGAPqeNlPY/view?usp=sharing" target="_blank">
-        <button class="w-full rounded-full px-16 pb-2 py-2 border-2 border-grey hover:bg-teal-50 transition m-full md:max-w-[700px]">
-          <h4>Open Resume</h4>
+        <button class="w-full rounded-full px-16 pb-3 py-2 border-2 border-grey hover:bg-gray-100 transition m-full md:max-w-[600px]">
+          <p>OPEN RESUME</p>
         </button>
       </a>
       
