--- a/src/hereafter.html
+++ b/src/hereafter.html
@@ -43,19 +43,20 @@
 
   
 
-  <section class="flex flex-col lg:flex-row pt-8 md:pt-12 sm:pl-10 lg:pl-32 md:pb-6 gap-3 px-4 border-grey border-b">
-    <div class="w-full lg:w-[20%]">
-      <h2>Here:after</h2>
-    </div>
+  <section class="flex flex-col lg:flex-row pt-8 md:pt-12 sm:pl-10 md:pb-6 gap-3 px-4 border-grey border-b">
     <div class="flex flex-col lg:px-16 gap-10">
       <div class="flex flex-col gap-4 pt-1">
-        <h3>The Mindful Journal for Students</h3>
+        <h1>Here:after</h1>
+        <h4>The Mindful Journalling Experience</h4>
         <h4>
           Here:after is designed to simplify self-reflection for students. This project emerged from an assignment for my interaction design class, but evolved into a solution that accomplished
           <i><u>First Place in the UX category of 2023 RGD Student Awards</u></i> :)
         </h4>
       </div>
-      <button class="w-full rounded-xl md:rounded-2xl px-4 pb-3 py-1 border-2 border-grey hover:bg-gray-100 transition">
+      <button class="w-11/12 rounded-xl md:rounded-2xl px-4 pb-3 py-1 border-2 border-grey hover:bg-gray-950 hover:text-white hover:border-gray-950 transition flex justify-center items-baseline gap-4">
+        <p>
+          <i class="fa-brands fa-figma"></i>
+        </p>
         <h4>Try the Figma Link</h4>
       </button>
     </div>
@@ -79,72 +80,78 @@
   
 
     <!-- Feature Highlights -->
-    <section class="image-display-section w-full px-4 md:px-32  border-grey border-b">
+    <section class="image-display-section w-full px-4 md:px-24  border-grey border-b">
       <div class="image-container">
-        <img src="hereafter-all-features.png" class="border border-x-grey" alt="All Features">
-        <h4 class="py-3">(Fig 1) In-app Features. </h4>
+        <img src="hereafter-all-features.png" class="border border-grey border-t-0" alt="All Features">
+        <div class="border-grey border-x sm:px-4">
+          <h6 class="py-3">Fig 1. In-app features. </h6>
+        </div>
       </div>
     </section>
 
 
 
 <!-- My Role Section -->
-<section class="flex flex-col lg:flex-row py-12 pb-24  px-4 sm:px-10 lg:pl-32 justify-between border-grey border-b">
+<section class="flex flex-col lg:flex-row py-12 pb-16 px-4 sm:px-10 justify-between border-grey border-b">
   <!-- Heading Section -->
-  <div class="w-full lg:w-[40%]">
-    <h3 class="pt-[0.75rem]">My Responsibilities ʕ•ᴥ•ʔ</h3>
+  <div class="w-full lg:w-[30%] lg:px-16">
+    <h4 class="pt-[0.75rem]">My Responsibilities</h4>
   </div>
-  <!-- Content Section -->
-  <div class="flex flex-col lg:px-16 gap-10 lg:w-[60%]">
-    <div class="flex flex-col gap-4 pt-4">
-      <h3 class="text-left">I was responsible for the <u>Home Page</u> and the "Add an Entry" task flow from start-to-finish.</h3>
+  <div class="flex flex-col lg:px-16 gap-10 lg:w-[70%]">
+    <div class="flex flex-col gap-3 pt-4">
+      
+      <h3 class="text-left">I was responsible for designing the <u>Home Page</u> and the "Add an Entry" task flow from start-to-finish.</h3>
       <div class="flex flex-col gap-8 pt-4">
         <h4 class="text-left">Some of my activities included:</h4>
-        <h4 class="text-left">
-          - Conducting User Interviews <br>
-          - Interpreting Data <br>
-          - Crafting User Personas <br>
-          - Developing User Flows <br>
-          - Designing Wireframes <br>
-          - Streamlining the Design System <br>
-        </h4>
+        <div class="text-left">
+          <h6 class="custom-list-item">Conducting User Interviews</h6>
+          <h6 class="custom-list-item">Interpreting Data</h6>
+          <h6 class="custom-list-item">Crafting User Personas</h6>
+          <h6 class="custom-list-item">Developing User Flows</h6>
+          <h6 class="custom-list-item">Designing Wireframes</h6>
+          <h6 class="custom-list-item">Streamlining the Design System</h6>
+        </div>
       </div>
     </div>
   </div>
 </section>
 
-<section class="image-display-section w-full px-4 md:px-80  border-grey border-b">
-  <div class="image-container">
-    <img src="hereafter-hero2.png" class="border border-x-grey" alt="mockup">
-    <h4 class="py-3">(Fig 2) Categorizing your mood through keywords and emojis. </h4>
+
+<section class="image-display-section w-full px-4 md:px-24  border-grey border-b">
+  <div class="image-container  px-24">
+    <img src="hereafter-hero2.png" class="border border-grey border-t-0" alt="All Features">
+    <div class="border-grey border-x sm:px-4">
+      <h6 class="py-3">Fig 2. Categorizing your mood through keywords and emojis. </h6>
+    </div>
   </div>
 </section>
 
 <!-- Product Development Section -->
-<section class="flex flex-col lg:flex-row py-12 pb-24 lg:pl-32 sm:px-10 justify-between px-4 border-grey border-b">
+<section class="flex flex-col lg:flex-row py-12 pb-24 sm:px-10 justify-between px-4 border-grey border-b">
   <!-- Heading Section -->
-  <div class="w-full lg:w-[40%]">
-    <h3 class="pt-[0.75rem]">Product Development</h3>
+  <div class="w-full lg:w-[30%] lg:px-16">
+    <h4 class="pt-[0.75rem]">Product Development</h4>
   </div>
   <!-- Content Section -->
-  <div class="flex flex-col lg:px-16 gap-10 lg:w-[60%]">
+  <div class="flex flex-col lg:px-16 gap-10 lg:w-[70%]">
     <div class="flex flex-col gap-4 pt-4">
-      <h4 class="text-left">Problem Space</h4>
+      <p class="text-left">PROBLEM SPACE</p>
       <h3 class="text-left">
         As university students ourselves, my team identified mental health as a prevalent challenge among peers. We wanted to create a tool that facilitates mindfulness and emotional awareness through journaling.
       </h3>
     </div>
     <div class="flex flex-col gap-4 pt-4">
-      <h4 class="text-left">User Interviews</h4>
+      <p class="text-left">USER INTERVIEWS</p>
       <h3 class="text-left">
         We started off by interviewing 8 students from York University and Sheridan College who use or considered journaling as a self-reflection method.
       </h3>
       <div class="flex flex-col gap-8 pt-4">
-        <h4 class="text-left">
-          To ensure we approached the topic of mental health thoughtfully: <br>
-          - Interviews were conducted over Zoom for a week, each session lasting 30 minutes each. <br>
-          - I developed a script with open-ended questions to explore participants' habits, challenges, and motivations. <br>
-        </h4>
+        <h4>To ensure we approached the topic of mental health thoughtfully:</h4>
+        <div class="text-left">
+          <h6 class="custom-list-item">Interviews were conducted over Zoom for a week, each session lasting 30 minutes each.</h6>
+          <h6 class="custom-list-item">I developed a script with open-ended questions to explore participants' habits, challenges, and motivations.</h6>
+        </div>
+        
         <h4 class="text-left">
           By hearing from a variety of interviewees, we could learn from different perspectives and their varying pain points.
         </h4>
