--- a/src/archive.html
+++ b/src/archive.html
@@ -132,9 +132,9 @@
         <div class="grid-crosshair left"></div>
         <div class="grid-crosshair right"></div>
 
-        <div class="items-center px-4 md:px-24 2xl:px-20 gap-y-8 gap-12">
+        <div class="px-4 md:px-16 2xl:px-20">
           <div
-            class="flex flex-col lg:flex-row grid grid-cols-none md:grid-cols-2 flex-1 gap-4 2xl:gap-8 cards-section3"
+            class="grid grid-cols-1 md:grid-cols-2 gap-8 cards-section3"
           ></div>
         </div>
       </section>
