--- a/src/index.html
+++ b/src/index.html
@@ -2,110 +2,119 @@
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-E6RS5N28XQ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-E6RS5N28XQ');
-</script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-E6RS5N28XQ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-E6RS5N28XQ");
+    </script>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="ladybug.png">
-    <link rel="stylesheet" href="global.styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..900&family=Syne:wght@400..800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet">
+    <link rel="icon" type="image/png" href="ladybug.png" />
+    <link rel="stylesheet" href="global.styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..900&family=Syne:wght@400..800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     <title>Nina's Portfoilo</title>
-    <link href="https://fonts.googleapis.com/css2?family=Doto:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Doto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <!-- p5.js library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
   </head>
 
-<body>
-  <script src="header.js" type="module"></script> <!-- where header.js is the name of our reusable component script -->
-  <script src="footer.js" type="module"></script> <!-- where header.js is the name of our reusable component script -->
-<header-component></header-component>
+  <body>
+    <script src="header.js" type="module"></script>
+    <!-- where header.js is the name of our reusable component script -->
+    <script src="footer.js" type="module"></script>
+    <!-- where header.js is the name of our reusable component script -->
+    <header-component></header-component>
 
-<div class="cursor">
-  <span class="cursor-text"></span>
-</div>
-<div class="cursor-follower"></div>
-
-<div class="geist-grid-wrapper">
-  
-  <section class="px-4 md:px-16 2xl:px-20 pb-8 lg:pb-24 hero-with-grid">
-    <div class="grid-lines"></div>
-    <div class="grid-crosshair left"></div>
-    <div class="grid-crosshair right"></div>
-
-    <div class="flex flex-col items-center justify-center w-full relative">
-          <div id="ascii-music-container" class=" z-0 mix-blend-multiply"></div>
-      </div>
-
-
-    <div class="flex flex-col items-center md:flex-row w-full justify-center gap-8">
-      <div class="flex flex-col items-center flex-1 gap-8 md:gap-4">
-
-          <div class="max-w-3xl mx-auto space-y-6 ">
-              <h2 class=" text-center">Hey I am Nina, a uxui designer.</h2>
-              <p class="smolwidth text-center text-grey">
-                  /* As a vocalist who can also code, my strengths are on focusing on the technical and fine-tuning harmonous experiences */
-              </p>
-          </div>
-      </div>
-      </div>
-  </section>
-
-  <section class="md:pt-32 projects-with-grid pb-8 lg:pb-24">
-    <div class="grid-lines"></div>
-    <div class="grid-crosshair left"></div>
-    <div class="grid-crosshair right"></div>
-
-    <div class=" items-center px-4 md:px-24 2xl:px-20 gap-y-8 gap-12">
-          <!-- <h3 class="font-normal py-8">Featured Work</h3> -->
-
-      <!--   <div class="pb-2 w-full lg:w-28 rounded-full rounded-tl-none h-12 md:h-16 2xl:h-20 2xl:w-32 flex items-center 
-          <h3 class="text-white text-center 2xl:text-[36px]">uxui</h3>
-      </div> 
-      justify-center lg:sticky lg:top-[120px] bg-blob grow-0 border"> Adjusted top here -->
-      <div class="flex flex-col lg:flex-row grid grid-cols-none md:grid-cols-2 flex-1 gap-4 2xl:gap-8 cards-section"></div>
+    <div class="cursor">
+      <span class="cursor-text"></span>
     </div>
-</section>
-</div>
+    <div class="cursor-follower"></div>
 
-        <div class="justify-center bg-[#1B191B] w-[100%] pt-16 space-y-4 px-24">
-            <h3 class=" text-white">Designing harmony, one pixel at a time.</h3>
-            <h6 class=" text-grey">
-Play a song that holds a special place in my heart</h6>
+    <div class="geist-grid-wrapper">
+      <section class="px-4 md:px-16 2xl:px-20 pb-8 lg:pb-24 hero-with-grid">
+        <div class="grid-lines"></div>
+        <div class="grid-crosshair left"></div>
+        <div class="grid-crosshair right"></div>
+
+        <div class="flex flex-col items-center justify-center w-full relative">
+          <div id="ascii-music-container" class="z-0 mix-blend-multiply"></div>
         </div>
 
+        <div
+          class="flex flex-col items-center md:flex-row w-full justify-center gap-8"
+        >
+          <div class="flex flex-col items-center flex-1 gap-8 md:gap-4">
+            <div class="max-w-3xl mx-auto space-y-6">
+              <h2 class="text-center">Hey I am Nina, a uxui designer.</h2>
+              <p class="smolwidth text-center text-grey">
+                /* As a vocalist who can also code, my strengths are on focusing
+                on the technical and fine-tuning harmonous experiences */
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
 
+      <section class="md:pt-32 projects-with-grid pb-8 lg:pb-24">
+        <div class="grid-lines"></div>
+        <div class="grid-crosshair left"></div>
+        <div class="grid-crosshair right"></div>
 
-  <!-- p5.js Sketch Container -->
-  <section class=" ">
-    <div id="sketch-container" class="w-full overflow-hidden"></div>
-  </section>
+        <div class="px-4 md:px-16 2xl:px-20">
+<div class="grid grid-cols-1 md:grid-cols-2 gap-8 cards-section"></div>
+        </div>
+      </section>
+    </div>
 
+    <div class="justify-center bg-[#1B191B] w-[100%] pt-16 space-y-4 px-24">
+      <h3 class="text-white">Designing harmony, one pixel at a time.</h3>
+      <h6 class="text-grey">
+        Play a song that holds a special place in my heart
+      </h6>
+    </div>
 
+    <!-- p5.js Sketch Container -->
+    <section class=" ">
+      <div id="sketch-container" class="w-full overflow-hidden"></div>
+    </section>
 
-<script type="module" src="main.js"></script>
-<script type="module" src="cursor.js"></script>
+    <script type="module" src="main.js"></script>
+    <script type="module" src="cursor.js"></script>
 
-<script>
-  // Wait for DOM and p5.js to be ready
-  if (document.readyState === 'loading') {
-    document.addEventListener('DOMContentLoaded', function() {
-      if (typeof p5 !== 'undefined') {
-        // p5.js will auto-detect setup() and draw() functions
+    <script>
+      // Wait for DOM and p5.js to be ready
+      if (document.readyState === "loading") {
+        document.addEventListener("DOMContentLoaded", function () {
+          if (typeof p5 !== "undefined") {
+            // p5.js will auto-detect setup() and draw() functions
+          }
+        });
       }
-    });
-  }
-</script>
-<script src="sketch.js"></script>
-<script src="ascii-music.js" class="bg-blend-multiply"></script>
-      <footer-component></footer-component>
-
+    </script>
+    <script src="sketch.js"></script>
+    <script src="ascii-music.js" class="bg-blend-multiply"></script>
+    <footer-component></footer-component>
   </body>
 </html>
